// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatRenderer snapshot (T-0006-070) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="12, done, trending up"
  accessibilityRole="text"
>
  <Text
    accessibilityElementsHidden={true}
    adjustsFontSizeToFit={true}
    minimumFontScale={0.5}
    numberOfLines={1}
    style={
      {
        "color": "#14171A",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": -0.2,
        "lineHeight": 30,
        "textAlign": "left",
      }
    }
  >
    12
  </Text>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "textAlign": "left",
      }
    }
  >
    done
  </Text>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#0E8345",
        "fontSize": 11,
        "fontWeight": "500",
        "letterSpacing": 0.4,
        "lineHeight": 14,
        "textAlign": "left",
      }
    }
  >
    +3 vs yesterday
  </Text>
</View>
`;

exports[`StatRenderer snapshot (T-0006-071) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="12, done, trending up"
  accessibilityRole="text"
>
  <Text
    accessibilityElementsHidden={true}
    adjustsFontSizeToFit={true}
    minimumFontScale={0.5}
    numberOfLines={1}
    style={
      {
        "color": "#1A1715",
        "fontSize": 28,
        "fontWeight": "500",
        "letterSpacing": -0.3,
        "lineHeight": 36,
        "textAlign": "left",
      }
    }
  >
    12
  </Text>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "textAlign": "left",
      }
    }
  >
    done
  </Text>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#4A7B45",
        "fontSize": 11,
        "fontWeight": "500",
        "letterSpacing": 0.4,
        "lineHeight": 14,
        "textAlign": "left",
      }
    }
  >
    +3 vs yesterday
  </Text>
</View>
`;
